--- a/ugcmaterials.html
+++ b/ugcmaterials.html
@@ -129,8 +129,24 @@
     const items = [
       // --- PYQs (past-year questions)
       { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
-      { id: 'pyq-2022', title: 'UGC NET Paper 2 — PYQ 2022', year: 2022, tags:['pyq'], type: 'pyq', link: 'files/pyq-2022.pdf' },
-      { id: 'pyq-2019', title: 'UGC NET Paper 2 — PYQ 2019', year: 2019, tags:['pyq'], type: 'pyq', link: 'files/pyq-2019.pdf' },
+      { id: 'pyq-2024', title: 'UGC NET Paper 2 — PYQ 2024 December ', year: 2024, tags:['pyq','2024'], type: 'pyq', link: 'https://forms.gle/7aQD8FCuGMyEDNjaA', desc: 'Complete paper for 2024 December (Population Studies).' },
+      { id: 'pyq-2024', title: 'UGC NET Paper 2 — PYQ 2024 June', year: 2024, tags:['pyq','2024'], type: 'pyq', link: 'https://forms.gle/oydEbTzupSey1hMt5', desc: 'Complete paper for 2024 June (Population Studies).' },
+       { id: 'pyq-2023', title: 'UGC NET Paper 2 — PYQ 2023 December', year: 2023, tags:['pyq','2023'], type: 'pyq', link: 'https://forms.gle/ucEhzk1oYb724hua9', desc: 'Complete paper for 2023 June (Population Studies).' },
+       { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
+       { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
+       { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
+        { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
+        { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
+        { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
+       { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
+        { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
+         { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
+        { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
+         { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
+         { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
+         { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
+         { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
+          { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
 
       // --- Mock tests
       { id: 'mock-01', title: 'Mock Test 01 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '50 MCQs; 90 minutes. Solutions published after window.' },
