--- a/ugcmaterials.html
+++ b/ugcmaterials.html
@@ -137,7 +137,7 @@
        { id: 'pyq-2021', title: 'UGC NET Paper 2 — PYQ 2021 December ', year: 2021, tags:['pyq','2021'], type: 'pyq', link: 'https://forms.gle/SAwKnFHfHVetEAkF6', desc: 'Complete paper for 2021 December (Population Studies).' },
         { id: 'pyq-2020', title: 'UGC NET Paper 2 — PYQ 2020 December', year: 2020, tags:['pyq','2020'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2020 December (Population Studies).' },
         { id: 'pyq-2019', title: 'UGC NET Paper 2 — PYQ 2019 December', year: 2019, tags:['pyq','2019'], type: 'pyq', link: 'https://forms.gle/pH7JGyrRLYUM7cjU8', desc: 'Complete paper for 2019 December (Population Studies).' },
-        { id: 'pyq-2019', title: 'UGC NET Paper 2 — PYQ 2019 June',  <span class="badge-free">FREE</span>,year: 2019, tags:['pyq','2019'], type: 'pyq', link: 'https://forms.gle/m4ixuuMFbMZxwk9D7', desc: 'Complete paper for 2019 June (Population Studies).' },
+        { id: 'pyq-2019', title: 'UGC NET Paper 2 — PYQ 2019 June',year: 2019, tags:['pyq','2019'], type: 'pyq', link: 'https://forms.gle/m4ixuuMFbMZxwk9D7', desc: 'Complete paper for 2019 June (Population Studies).' },
        { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
         { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
          { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
@@ -152,17 +152,46 @@
       { id: 'mock-01', title: 'Mock Test 01 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '50 MCQs; 90 minutes. Solutions published after window.' },
       { id: 'mock-02', title: 'Mock Test 02 — Population Studies', year: 2025, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-2' },
       { id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
+      { id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
+{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
+{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
+{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
+{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
+{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
+{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
+{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
+{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
+{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
+{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
+{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
+{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
+{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
+{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
+{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
+{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
+{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
 
       // --- Important Questions
       { id: 'imp-01', title: 'Important Questions — Sampling', year: null, tags:['sampling','important'], type: 'imp', link: 'files/imp-sampling.pdf', desc: 'High-yield sampling questions and hints.' },
       { id: 'imp-02', title: 'Important Questions — Demography', year: null, tags:['demography'], type: 'imp', link: 'files/imp-demography.pdf' },
       { id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
+{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
+{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
+{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
+{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
+{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
+{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
+{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
+{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
+{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
+{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
+{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
+{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
 
       // --- Books & Public Materials
-      { id: 'book-1', title: 'Population Studies — Intro (Public PDF)', year: 2017, tags:['book','pdf'], type: 'book', link: 'https://example.com/book-population.pdf', desc:'A public-domain book covering basic demographic methods.' },
-      { id: 'book-2', title: 'Solved Papers Collection (ZIP)', year: null, tags:['book','zip'], type: 'book', link: 'files/solved-collection.zip' },
-      { id: 'book-3', title: 'Reference Notes — Population Dynamics', year: 2019, tags:['notes','pdf'], type: 'book', link: 'files/ref-population-dynamics.pdf' }
-    ];
+      { id: 'book-1', title: 'Population Studies — Intro', year: 2017, tags:['book','pdf'], type: 'book', link: 'https://example.com/book-population.pdf', desc:'A public-domain book covering basic demographic methods.' },
+      { id: 'book-2', title: 'PyQ Papers Collection', year: null, tags:['book','zip'], type: 'book', link: 'files/solved-collection.zip' },
+         ];
 
     /*************************************************************************
      * DO NOT CHANGE BELOW unless you know JS.
