--- a/register.html
+++ b/register.html
@@ -98,7 +98,7 @@
 
           <div class="reg-actions" style="margin-top:12px;">
             <a class="btn primary" href="https://forms.gle/mmuW5bv4GSzKFTYB6#FORM_LINK" target="_blank" rel="noopener">Register</a>
-            <a class="btn ghost" href="https://chat.whatsapp.com/J6pgWYeiFouJCM91KUVOg3?mode=hqrt1" target="_blank">Join WhatsApp Group</a>
+            <a class="btn ghost" href="https://chat.whatsapp.com/GSRggKQTvtuJdV9gIQDZ7r" target="_blank">Join WhatsApp Group</a>
             <a class="btn ghost" href="ugcmaterials.html#ugc-details" style="align-self:center">Details</a>
           </div>
         </article>
