--- a/ugcmaterials.html
+++ b/ugcmaterials.html
@@ -138,39 +138,38 @@
         { id: 'pyq-2020', title: 'UGC NET Paper 2 — PYQ 2020 December', year: 2020, tags:['pyq','2020'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2020 December (Population Studies).' },
         { id: 'pyq-2019', title: 'UGC NET Paper 2 — PYQ 2019 December', year: 2019, tags:['pyq','2019'], type: 'pyq', link: 'https://forms.gle/pH7JGyrRLYUM7cjU8', desc: 'Complete paper for 2019 December (Population Studies).' },
         { id: 'pyq-2019', title: 'UGC NET Paper 2 — PYQ 2019 June',year: 2019, tags:['pyq','2019'], type: 'pyq', link: 'https://forms.gle/m4ixuuMFbMZxwk9D7', desc: 'Complete paper for 2019 June (Population Studies).' },
-       { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
-        { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
-         { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
-        { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
-         { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
-         { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
-         { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
-         { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
-          { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
+       { id: 'pyq-2018', title: 'UGC NET Paper 2 — PYQ 2018 December ', year: 2018, tags:['pyq','2018'], type: 'pyq', link: 'https://forms.gle/auhitKpDhvLantQr8', desc: 'Complete paper for 2018 December (Population Studies).' },
+        { id: 'pyq-2018', title: 'UGC NET Paper 2 — PYQ 2018 June', year: 2018, tags:['pyq','2018'], type: 'pyq', link: 'https://forms.gle/rMyLyEethg86CmDa9', desc: 'Complete paper for 2018 June (Population Studies).' },
+         { id: 'pyq-2017', title: 'UGC NET Paper 2 — PYQ 2017 November', year: 2017, tags:['pyq','2017'], type: 'pyq', link: 'https://forms.gle/c7iaicLRMhZQaTE88', desc: 'Complete paper for 2017 November (Population Studies).' },
+        { id: 'pyq-2017', title: 'UGC NET Paper 2 — PYQ 2017 January ', year: 2017, tags:['pyq','2017'], type: 'pyq', link: 'https://forms.gle/W69bFEaboSwddgHF8', desc: 'Complete paper for 2017 January (Population Studies).' },
+         { id: 'pyq-2016', title: 'UGC NET Paper 2 — PYQ 2016 June', year: 2025, tags:['pyq','2016'], type: 'pyq', link: 'https://forms.gle/L3xDccEzBPmVYT1a8', desc: 'Complete paper for 2016 June (Population Studies).' },
+         { id: 'pyq-2015', title: 'UGC NET Paper 2 — PYQ 2015 December', year: 2025, tags:['pyq','2015'], type: 'pyq', link: 'https://forms.gle/CyoLwiXUUeLM2zWc8', desc: 'Complete paper for 2015 December (Population Studies).' },
+         { id: 'pyq-2015', title: 'UGC NET Paper 2 — PYQ 2015 June', year: 2025, tags:['pyq','2015'], type: 'pyq', link: 'https://forms.gle/GyBdX8zCALsBdY5s8', desc: 'Complete paper for 2015 June (Population Studies).' },
+         { id: 'pyq-2014', title: 'UGC NET Paper 2 — PYQ 2014 December', year: 2025, tags:['pyq','2014'], type: 'pyq', link: 'https://forms.gle/t9vyxPsZCpQ8YF499', desc: 'Complete paper for 2014 December (Population Studies).' },
+          { id: 'pyq-2014', title: 'UGC NET Paper 2 — PYQ 2014 June', year: 2025, tags:['pyq','2014'], type: 'pyq', link: 'https://forms.gle/eb31KToBaa6mSq9E8', desc: 'Complete paper for 2014 June (Population Studies).' },
 
       // --- Mock tests
-      { id: 'mock-01', title: 'Mock Test 01 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '50 MCQs; 90 minutes. Solutions published after window.' },
-      { id: 'mock-02', title: 'Mock Test 02 — Population Studies', year: 2025, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-2' },
-      { id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
-      { id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
-{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
-{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
-{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
-{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
-{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
-{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
-{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
-{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
-{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
-{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
-{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
-{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
-{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
-{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
-{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
-{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
-{ id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2024, tags:['mcq'], type: 'mock', link: 'https://forms.gle/example-mock-3' },
-
+      { id: 'mock-01', title: 'Mock Test 01 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
+       { id: 'mock-02', title: 'Mock Test 02 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
+       { id: 'mock-03', title: 'Mock Test 03 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
+       { id: 'mock-04', title: 'Mock Test 04 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
+       { id: 'mock-05', title: 'Mock Test 05 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
+       { id: 'mock-06', title: 'Mock Test 06 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
+       { id: 'mock-07', title: 'Mock Test 07 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
+       { id: 'mock-08', title: 'Mock Test 08 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
+       { id: 'mock-09', title: 'Mock Test 09 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
+       { id: 'mock-10', title: 'Mock Test 10 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
+       { id: 'mock-11', title: 'Mock Test 11 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
+       { id: 'mock-12', title: 'Mock Test 12 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
+       { id: 'mock-13', title: 'Mock Test 13 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
+       { id: 'mock-14', title: 'Mock Test 14 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
+       { id: 'mock-15', title: 'Mock Test 15 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
+       { id: 'mock-16', title: 'Mock Test 16 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
+      { id: 'mock-17, title: 'Mock Test 17 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
+      { id: 'mock-18', title: 'Mock Test 18 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
+      { id: 'mock-19', title: 'Mock Test 19 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
+      { id: 'mock-20', title: 'Mock Test 20 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/example-mock-1', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
+      
       // --- Important Questions
       { id: 'imp-01', title: 'Important Questions — Sampling', year: null, tags:['sampling','important'], type: 'imp', link: 'files/imp-sampling.pdf', desc: 'High-yield sampling questions and hints.' },
       { id: 'imp-02', title: 'Important Questions — Demography', year: null, tags:['demography'], type: 'imp', link: 'files/imp-demography.pdf' },
