--- a/ugcmaterials.html
+++ b/ugcmaterials.html
@@ -74,7 +74,7 @@
       </div>
       <nav style="display:flex;gap:14px;">
         <a href="index.html">Home</a>
-        <a href="materials.html">All Materials</a>
+        <a href="rgister.html">All Materials</a>
         <a href="services.html">Services</a>
       </nav>
     </div>
@@ -171,21 +171,12 @@
       { id: 'mock-20', title: 'Mock Test 20 — Population Studies', year: 2025, tags:['mcq','timed'], type: 'mock', link: 'https://forms.gle/4QGfP9SCSXkfD27m9', desc: '100 MCQs; 120 minutes. Solutions published after window.' },
       
       // --- Important Questions
-      { id: 'imp-01', title: 'Important Questions — Sampling', year: null, tags:['sampling','important'], type: 'imp', link: 'files/imp-sampling.pdf', desc: 'High-yield sampling questions and hints.' },
-      { id: 'imp-02', title: 'Important Questions — Demography', year: null, tags:['demography'], type: 'imp', link: 'files/imp-demography.pdf' },
-      { id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
-{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
-{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
-{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
-{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
-{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
-{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
-{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
-{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
-{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
-{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
-{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
-{ id: 'imp-03', title: 'Important Questions — Measures', year: null, tags:['measures'], type: 'imp', link: 'files/imp-measures.pdf' },
+      { id: 'imp-01', title: 'Important Questions Set 1', year: null, tags:['imp''repeated'], type: 'imp', link: 'https://forms.gle/LvmiZRg81DRj67gXA', desc: 'Most Important Questions(Learn From Repetition)🔂','(importent+related important QUESTION for learn)' },
+    { id: 'imp-02', title: 'Important Questions Set 2', year: null, tags:['imp''repeated'], type: 'imp', link: 'https://forms.gle/Lw9zcNEQunZUJAwY7', desc: 'Most Important Questions(Learn From Repetition)🔂','(importent+related important QUESTION for learn)' },
+    { id: 'imp-03', title: 'Important Questions Set 3', year: null, tags:['imp''repeated'], type: 'imp', link: 'https://forms.gle/6GLpPziXc4Pkw6R57', desc: 'Most Important Questions(Learn From Repetition)🔂','(importent+related important QUESTION for learn)' },
+   { id: 'imp-04', title: 'Important Questions Set 4', year: null, tags:['imp''repeated'], type: 'imp', link: 'https://forms.gle/1JtKoqBXUN5FpnRZ6', desc: 'Most Important Questions(Learn From Repetition)🔂','(importent+related important QUESTION for learn)' },
+    { id: 'imp-05', title: 'Important Questions Set 5', year: null, tags:['imp''repeated'], type: 'imp', link: 'https://forms.gle/x8aY9Gk5MNpg52GCA', desc: 'Most Important Questions(Learn From Repetition)🔂','(importent+related important QUESTION for learn)' },
+    { id: 'imp-06', title: 'Important Questions Set 6', year: null, tags:['imp''repeated'], type: 'imp', link: 'https://forms.gle/espKuxC4WdvYVP7E6', desc: 'Most Important Questions(Learn From Repetition)🔂','(importent+related important QUESTION for learn)' },
 
       // --- Books & Public Materials
       { id: 'book-1', title: 'Population Studies — Intro', year: 2017, tags:['book','pdf'], type: 'book', link: 'https://example.com/book-population.pdf', desc:'A public-domain book covering basic demographic methods.' },
