--- a/ugcmaterials.html
+++ b/ugcmaterials.html
@@ -179,7 +179,7 @@
     { id: 'imp-06', title: 'Important Questions Set 6', year: null, tags:['imp''repeated'], type: 'imp', link: 'https://forms.gle/espKuxC4WdvYVP7E6', desc: 'Most Important Questions(Learn From Repetition)🔂','(importent+related important QUESTION for learn)' },
 
       // --- Books & Public Materials
-      { id: 'book-1', title: 'Population Studies — Intro', year: 2017, tags:['book','pdf'], type: 'book', link: 'material-detail.html#book-1', desc:'A public-domain book covering basic demographic methods.' },
+      { id: 'book-1', title: 'Population Studies — Intro', year: 2017, tags:['book','pdf'], type: 'book', link: 'cdm', desc:'A public-domain book covering basic demographic methods.' },
       { id: 'book-2', title: 'PyQ Papers Collection', year: null, tags:['book','zip'], type: 'book', link: 'files/solved-collection.zip' },
          ];
 
