--- a/material-detail.html
+++ b/material-detail.html
@@ -152,7 +152,7 @@ const items = [
   { id: 'book-1', title: 'Population Studies — Intro', year: 2017, tags:['book','pdf'], type: 'book', link: 'files/book-population.pdf', desc:'A public-domain book covering basic demographic methods.', free:true },
   { id: 'book-2', title: 'PyQ Papers Collection', year: null, tags:['book','zip'], type: 'book', link: 'files/solved-collection.zip', desc:'Collection of solved PYQs (zip).', free:true },
   { id: 'pyq-2019-jun', title: 'UGC NET Paper 2 — PYQ 2019 June', year: 2019, tags:['pyq','2019'], type: 'pyq', link: 'files/pyq-2019.pdf', desc: 'Complete paper for 2019 June (Population Studies).', free:true },
-  { id: 'yt-populations', title: 'Population Studies — YouTube Playlist', year: null, tags:['video','playlist'], type:'video', link:'https://www.youtube.com/playlist?list=PLxyz123456', desc:'Public playlist covering important topics.'}
+  { id: 'yt-populations', title: 'Population Studies — YouTube Playlist', year: null, tags:['video','playlist'], type:'video', link:'https://youtu.be/GWdSSIhgF-8?si=HKP3R5iaCqlmFFhk', desc:'Public playlist covering important topics.'}
 ];
 
 /* ======= Utility: read id from hash ======= */
