--- a/pdfmaterial-detail.html
+++ b/pdfmaterial-detail.html
@@ -4,22 +4,14 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Material Viewer — STATUP</title>
-<meta name="description" content="STATUP materials viewer — books, PYQs, mock tests, playlists and files for UGC NET Paper 2 (Population Studies)." />
+<meta name="description" content="STATUP materials viewer — PDF materials for UGC NET Paper 2 (Population Studies)." />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 <style>
-  /* ---- Base / theme ---- */
   :root{
-    --bg:#f6fbfb;
-    --surface:#ffffff;
-    --muted:#6b7a83;
-    --text:#073b4c;
-    --accent1:#0e9ea4;
-    --accent2:#39b893;
-    --shadow: 0 14px 40px rgba(12,45,47,0.06);
-    --card-radius:14px;
-    --gap:18px;
-    --max-w:1100px;
+    --bg:#f6fbfb; --surface:#ffffff; --muted:#6b7a83; --text:#073b4c;
+    --accent1:#0e9ea4; --accent2:#39b893; --shadow: 0 14px 40px rgba(12,45,47,0.06);
+    --card-radius:14px; --gap:18px; --max-w:1100px;
   }
   html,body{height:100%;margin:0;font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial; background:var(--bg); color:var(--text); -webkit-font-smoothing:antialiased}
   a { color:var(--accent1); text-decoration:none }
@@ -28,15 +20,12 @@
   .small{font-size:13px;color:var(--muted)}
   .muted{color:var(--muted)}
 
-  /* ---- Header ---- */
   header{background:linear-gradient(180deg,#fbfffe,#f6fbfb);border-bottom:1px solid rgba(10,40,50,0.03)}
   .topbar{display:flex;align-items:center;justify-content:space-between;gap:12px}
   .brand{display:flex;align-items:center;gap:12px}
-  .brand strong{font-weight:700;font-size:18px;letter-spacing:0.2px}
+  .brand strong{font-weight:700;font-size:18px}
   nav a{margin-left:16px;font-weight:600;color:rgba(8,40,45,0.75)}
-  nav a:hover{color:var(--text)}
 
-  /* ---- Breadcrumb / hero ---- */
   .breadcrumb{font-size:13px;color:var(--muted);margin:18px 0}
   .viewer-hero{display:flex;gap:24px;align-items:flex-start;flex-wrap:wrap;padding:20px;border-radius:var(--card-radius);background:linear-gradient(180deg,#ffffff, #f8fbfb);box-shadow:var(--shadow)}
   .cover{width:340px;min-width:200px;border-radius:12px;overflow:hidden;background:#f2f8f7;box-shadow:0 10px 30px rgba(12,45,47,0.04)}
@@ -46,19 +35,16 @@
   .meta .meta-sub{margin-top:8px;color:var(--muted)}
   .actions{display:flex;gap:10px;flex-wrap:wrap;margin-top:16px}
 
-  /* ---- Buttons ---- */
   .btn{display:inline-flex;align-items:center;gap:8px;padding:10px 14px;border-radius:10px;border:0;cursor:pointer;font-weight:700;font-size:14px}
   .btn:focus{outline:3px solid rgba(14,158,164,0.12);outline-offset:3px}
   .btn.primary{background:linear-gradient(90deg,var(--accent1),var(--accent2));color:#fff;box-shadow:0 10px 32px rgba(14,165,164,0.08)}
   .btn.ghost{background:#fff;border:1px solid rgba(10,40,50,0.06);color:var(--text)}
   .btn.link-like{background:transparent;color:var(--accent1);font-weight:600;padding:8px 10px;border-radius:8px}
 
-  /* ---- extra meta / badge ---- */
   .badge-free{display:inline-block;background:#16a34a;color:#fff;padding:6px 10px;border-radius:999px;font-weight:800;font-size:12px}
   .tags{display:flex;gap:10px;flex-wrap:wrap;margin-top:12px}
   .tag{background:#eef8f6;padding:6px 8px;border-radius:999px;font-size:13px;color:var(--accent1);font-weight:700}
 
-  /* ---- related gallery ---- */
   .gallery{margin-top:20px;display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:16px}
   .item-card{background:var(--surface);padding:12px;border-radius:12px;box-shadow:0 8px 26px rgba(12,45,47,0.04);display:flex;flex-direction:column;min-height:200px}
   .item-thumb{height:120px;border-radius:8px;overflow:hidden;background:#eef7f5;display:flex;align-items:center;justify-content:center}
@@ -66,22 +52,14 @@
   .item-title{font-weight:700;margin:10px 0 6px 0;color:var(--text);font-size:15px}
   .item-desc{color:var(--muted);font-size:13px;flex:1}
 
-  /* ---- modal (preview player/pdf) ---- */
   .modal-backdrop{position:fixed;inset:0;background:rgba(6,12,12,0.6);display:none;align-items:center;justify-content:center;padding:20px;z-index:9999}
   .modal{background:var(--surface);width:min(1100px,96%);border-radius:12px;padding:12px;box-shadow:0 30px 80px rgba(4,12,12,0.5)}
   .modal iframe{width:100%;height:560px;border-radius:8px;border:0}
   .modal .modal-head{display:flex;justify-content:space-between;align-items:center;margin-bottom:8px}
   .close-x{background:transparent;border:0;font-size:16px;padding:8px;cursor:pointer}
 
-  /* ---- responsive tweaks ---- */
-  @media (max-width:980px){
-    .cover{width:280px}
-  }
-  @media (max-width:820px){
-    .viewer-hero{flex-direction:column}
-    .cover{width:100%}
-    .meta{width:100%}
-  }
+  @media (max-width:980px){ .cover{width:280px} }
+  @media (max-width:820px){ .viewer-hero{flex-direction:column} .cover{width:100%} .meta{width:100%} }
 </style>
 </head>
 <body>
@@ -89,9 +67,7 @@
     <div class="wrap topbar" role="banner">
       <div class="brand" aria-label="STATUP brand">
         <img src="logo.png" alt="STATUP logo" style="height:44px" onerror="this.style.display='none'">
-        <div>
-          <strong>STATUP</strong><br><span class="small">Materials viewer</span>
-        </div>
+        <div><strong>STATUP</strong><br><span class="small">Materials viewer</span></div>
       </div>
       <nav aria-label="Primary navigation">
         <a href="materials.html">All materials</a> ·
@@ -115,9 +91,9 @@
         <p id="desc" class="muted" style="margin-top:12px"></p>
 
         <div class="actions" aria-label="Material actions">
-          <a id="openLink" class="btn primary" target="_blank" rel="noopener">Open (file)</a>
-          <button id="previewBtn" class="btn ghost" style="display:none">Preview</button>
-          <a id="downloadBtn" class="btn ghost" style="display:none" download>Download</a>
+          <a id="openLink" class="btn primary" target="_blank" rel="noopener">Open (resource)</a>
+          <button id="previewBtn" class="btn ghost" style="display:none">Preview PDF</button>
+          <a id="downloadBtn" class="btn ghost" style="display:none" download>Download PDF</a>
           <a href="materials.html" class="btn link-like" title="Return to All materials">Back to materials</a>
         </div>
 
@@ -131,34 +107,52 @@
     </section>
   </main>
 
-  <!-- preview modal -->
   <div id="modal" class="modal-backdrop" aria-hidden="true" role="dialog" aria-modal="true" aria-label="Preview">
     <div class="modal" role="document">
       <div class="modal-head">
         <div id="modalTitle" style="font-weight:700"></div>
-        <div>
-          <button id="modalClose" class="close-x" aria-label="Close preview">✕</button>
-        </div>
+        <div><button id="modalClose" class="close-x" aria-label="Close preview">✕</button></div>
       </div>
       <div id="modalBody" style="min-height:80px"></div>
     </div>
   </div>
 
 <script>
-/* ========== your items array ========== 
-   Replace the sample items below with your real items or include shared JS.
-*/
+/* ========== items array: put your PDF items here ========== */
 const items = [
-  { id: 'book-1', title: 'Population Studies — Intro', year: 2017, tags:['book','pdf'], type: 'book', link: 'files/book-population.pdf', desc:'A public-domain book covering basic demographic methods.', free:true },
-  { id: 'book-2', title: 'PyQ Papers Collection', year: null, tags:['book','zip'], type: 'book', link: 'files/solved-collection.zip', desc:'Collection of solved PYQs (zip).', free:true },
+  // EXAMPLES - replace with your own list
   { id: 'pyq-2019-jun', title: 'UGC NET Paper 2 — PYQ 2019 June', year: 2019, tags:['pyq','2019'], type: 'pyq', link: 'files/pyq-2019.pdf', desc: 'Complete paper for 2019 June (Population Studies).', free:true },
-  { id: 'yt-populations', title: 'Population Studies — YouTube Playlist', year: null, tags:['video','playlist'], type:'video', link:'https://youtu.be/GWdSSIhgF-8?si=HKP3R5iaCqlmFFhk', desc:'Public playlist covering important topics.'}
+  { id: 'book-1', title: 'Population Studies — Intro', year: 2017, tags:['book','pdf'], type: 'book', link: 'files/book-population.pdf', desc:'Introductory book (PDF).', free:true }
 ];
 
-/* ======= Utility: read id from hash ======= */
-function idFromHash(){ return location.hash ? location.hash.slice(1) : null; }
+/* ====== utils ====== */
+function idFromHash(){ return location.hash ? decodeURIComponent(location.hash.slice(1)) : null; }
+function isPdfUrl(url){
+  if(!url) return false;
+  const lower = url.split('?')[0].toLowerCase();
+  if (lower.endsWith('.pdf')) return true;
+  // common Google Drive preview forms:
+  if (url.includes('drive.google.com') && (url.includes('/preview') || url.includes('/view') || url.includes('/file/d/'))) return true;
+  return false;
+}
+function drivePreviewUrl(url){
+  // try to convert common Drive links to a preview URL that works in iframe:
+  // formats handled:
+  // 1) https://drive.google.com/file/d/FILE_ID/view?usp=sharing  -> /preview
+  // 2) https://drive.google.com/open?id=FILE_ID -> use /uc?export=download&id=FILE_ID (download) and preview may not work
+  // 3) any direct doc link containing /file/d/ -> use /preview
+  try {
+    const m = url.match(/\/file\/d\/([A-Za-z0-9_-]+)/);
+    if(m && m[1]) return `https://drive.google.com/file/d/${m[1]}/preview`;
+    const q = new URL(url);
+    if (q.searchParams && q.searchParams.get('id')) {
+      return `https://drive.google.com/file/d/${q.searchParams.get('id')}/preview`;
+    }
+  } catch(e){}
+  return url;
+}
 
-/* ======= Render viewer for item id ======= */
+/* ====== render viewer ====== */
 (function initViewer(){
   const id = idFromHash();
   const titleEl = document.getElementById('title');
@@ -191,146 +185,118 @@ function idFromHash(){ return location.hash ? location.hash.slice(1) : null; }
     return;
   }
 
-  // metadata
+  // metadata & breadcrumb
   bcTitle.textContent = item.title;
   titleEl.textContent = item.title;
   yearTypeEl.textContent = (item.year ? item.year + ' · ' : '') + (item.type ? item.type.toUpperCase() : '');
   descEl.textContent = item.desc || '';
 
-  // cover: try typical extensions; fallback via onerror
-  const trySrcs = [
+  // cover fallback logic (simple cycle and final placeholder)
+  const coverCandidates = [
     `files/covers/${item.id}.jpg`,
     `files/covers/${item.id}.png`,
     `files/covers/${item.id}.webp`,
-    `files/covers/${item.id}.jpeg`
+    `files/covers/${item.id}.jpeg`,
+    `files/covers/placeholder-cover.png`
   ];
-  // pick first candidate and let onerror fallback
-  coverImg.src = trySrcs[0];
-  coverImg.alt = item.title;
-  coverImg.onerror = () => {
-    // try next (rotating through list)
-    for (let i = 1; i < trySrcs.length; i++){
-      const s = trySrcs[i];
-      // if the img already tried this src, skip; assign and break
-      if (coverImg.src.indexOf(s) === -1) { coverImg.src = s; return; }
-    }
-    // final fallback
-    coverImg.src = 'files/covers/placeholder-cover.png';
-  };
+  (function tryCover(list){
+    if (!list || !list.length) return;
+    coverImg.src = list.shift();
+    coverImg.onerror = ()=> tryCover(list);
+  })(coverCandidates.slice());
 
-  // action buttons
+  // buttons & preview handling (PDF-only)
   openLink.href = item.link || '#';
   openLink.style.display = 'inline-flex';
-  // decide preview/download availability
   previewBtn.style.display = 'none';
   downloadBtn.style.display = 'none';
-  if (item.type === 'video') {
-    previewBtn.style.display = 'inline-flex';
-    previewBtn.textContent = 'Preview video';
-    previewBtn.onclick = () => openVideoModal(item.link, item.title);
-    openLink.target = '_blank';
-    openLink.textContent = 'Open video/playlist';
-  } else if (item.link && (item.link.endsWith('.pdf') || item.link.includes('.pdf'))) {
+
+  if (isPdfUrl(item.link)) {
+    // compute previewable URL (Drive-specific conversion where possible)
+    let previewUrl = item.link;
+    if (item.link.includes('drive.google.com')) previewUrl = drivePreviewUrl(item.link);
+
+    // If the URL ends with .pdf we can preview directly; if it's a Drive preview use that; else open in new tab fallback
     previewBtn.style.display = 'inline-flex';
     previewBtn.textContent = 'Preview PDF';
-    previewBtn.onclick = () => openPdfModal(item.link, item.title);
+    previewBtn.onclick = () => openPdfModal(previewUrl, item.title);
+
+    // download: prefer direct PDF url; for Drive use uc?export=download pattern (browser handles it)
     downloadBtn.style.display = 'inline-flex';
-    downloadBtn.href = item.link;
+    if (item.link.includes('drive.google.com')) {
+      // try to extract file id for direct download
+      const m = item.link.match(/\/file\/d\/([A-Za-z0-9_-]+)/);
+      const q = new URL(item.link, window.location.href);
+      const idParam = q.searchParams ? q.searchParams.get('id') : null;
+      const fileId = (m && m[1]) ? m[1] : idParam;
+      if (fileId) downloadBtn.href = `https://drive.google.com/uc?export=download&id=${fileId}`;
+      else downloadBtn.href = item.link;
+    } else {
+      downloadBtn.href = item.link;
+    }
     downloadBtn.textContent = 'Download PDF';
-    openLink.textContent = 'Open file';
+    openLink.textContent = 'Open (resource)';
+    openLink.target = '_blank';
   } else {
+    // not a PDF: keep openLink visible (opens in new tab)
+    previewBtn.style.display = 'none';
+    downloadBtn.style.display = 'none';
     openLink.textContent = 'Open (resource)';
     openLink.target = '_blank';
   }
 
-  // extra meta / tags / free badge
+  // tags and free badge
   extraMeta.innerHTML = '';
-  if (item.tags && item.tags.length) {
-    extraMeta.innerHTML += `<div class="small">Tags: ${item.tags.join(', ')}</div>`;
-  }
-  if (item.free) {
-    extraMeta.innerHTML += `<div style="margin-top:8px"><span class="badge-free" aria-hidden="true">FREE</span></div>`;
-  }
+  if (item.tags && item.tags.length) extraMeta.innerHTML += `<div class="small">Tags: ${item.tags.join(', ')}</div>`;
+  if (item.free) extraMeta.innerHTML += `<div style="margin-top:8px"><span class="badge-free" aria-hidden="true">FREE</span></div>`;
 
-  // build related gallery (same type or share tags)
+  // related gallery (same type or tags)
   const related = items.filter(it => it.id !== item.id && (it.type === item.type || (it.tags && item.tags && it.tags.some(t => item.tags && item.tags.includes(t))))).slice(0,12);
   gallery.innerHTML = related.length ? '' : '<div class="small">No related items.</div>';
   related.forEach(r => {
     const card = document.createElement('article');
     card.className = 'item-card';
-    const thumb = document.createElement('div');
-    thumb.className = 'item-thumb';
-    const img = document.createElement('img');
-    img.alt = r.title;
+    const thumb = document.createElement('div'); thumb.className = 'item-thumb';
+    const img = document.createElement('img'); img.alt = r.title;
     img.src = `files/covers/${r.id}.jpg`;
     img.onerror = () => { img.src = 'files/covers/placeholder-thumb.png'; };
     thumb.appendChild(img);
 
-    const title = document.createElement('div');
-    title.className = 'item-title';
+    const title = document.createElement('div'); title.className = 'item-title';
     title.innerHTML = `${r.title} ${r.free ? '<span class="badge-free" style="font-size:11px">FREE</span>' : ''}`;
 
-    const desc = document.createElement('div');
-    desc.className = 'item-desc';
-    desc.textContent = r.desc || '';
+    const desc = document.createElement('div'); desc.className = 'item-desc'; desc.textContent = r.desc || '';
 
-    const btnRow = document.createElement('div');
-    btnRow.style.marginTop = '10px';
+    const btnRow = document.createElement('div'); btnRow.style.marginTop = '10px';
     btnRow.innerHTML = `<a class="btn primary" href="material-detail.html#${encodeURIComponent(r.id)}">Open</a> <a class="btn ghost" href="${r.link}" target="_blank" rel="noopener">Open resource</a>`;
 
-    card.appendChild(thumb);
-    card.appendChild(title);
-    card.appendChild(desc);
-    card.appendChild(btnRow);
+    card.appendChild(thumb); card.appendChild(title); card.appendChild(desc); card.appendChild(btnRow);
     gallery.appendChild(card);
   });
+
 })(); // initViewer end
 
-/* ======= Modal helpers ======= */
+/* ===== modal helpers (PDF preview only) ===== */
 const modal = document.getElementById('modal');
 const modalBody = document.getElementById('modalBody');
-const modalClose = document.getElementById('modalClose');
+const modalClose = document.getElementById('modalClose') || document.getElementById('modalClose'); // safety
 const modalTitle = document.getElementById('modalTitle');
 
-modalClose.addEventListener('click', closeModal);
-modal.addEventListener('click', (e) => { if (e.target === modal) closeModal(); });
+if (document.getElementById('modalClose')) document.getElementById('modalClose').addEventListener('click', closeModal);
 document.addEventListener('keydown', (e) => { if (e.key === 'Escape') closeModal(); });
+document.getElementById('modal').addEventListener('click', (e) => { if (e.target === document.getElementById('modal')) closeModal(); });
 
 function openPdfModal(url, title = '') {
   modalTitle.textContent = title || 'Preview';
-  // embed pdf via iframe (works for public PDFs)
-  modalBody.innerHTML = `<iframe src="${url}"></iframe>`;
-  modal.style.display = 'flex';
-  modal.setAttribute('aria-hidden', 'false');
+  // use sandboxed iframe if possible; for Drive 'preview' url works
+  modalBody.innerHTML = `<iframe src="${url}" allow="autoplay; encrypted-media; picture-in-picture"></iframe>`;
+  modal.style.display = 'flex'; modal.setAttribute('aria-hidden','false');
 }
-
-function openVideoModal(yurl, title = '') {
-  modalTitle.textContent = title || 'Video';
-  let embed = '';
-  if (yurl.includes('youtube.com/playlist') || yurl.includes('list=')) {
-    const m = yurl.match(/list=([A-Za-z0-9_-]+)/);
-    if (m) embed = `https://www.youtube.com/embed/videoseries?list=${m[1]}`;
-  } else {
-    const vid = (yurl.match(/v=([A-Za-z0-9_-]+)/) || yurl.match(/youtu\\.be\\/([A-Za-z0-9_-]+)/) || [])[1];
-    if (vid) embed = `https://www.youtube.com/embed/${vid}?rel=0`;
-  }
-  if (!embed) {
-    window.open(yurl, '_blank');
-    return;
-  }
-  modalBody.innerHTML = `<iframe src="${embed}" allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen></iframe>`;
-  modal.style.display = 'flex';
-  modal.setAttribute('aria-hidden', 'false');
-}
-
 function closeModal() {
-  modal.style.display = 'none';
-  modal.setAttribute('aria-hidden', 'true');
-  modalBody.innerHTML = '';
-  modalTitle.textContent = '';
+  modal.style.display = 'none'; modal.setAttribute('aria-hidden','true'); modalBody.innerHTML = ''; modalTitle.textContent = '';
 }
 
-/* Reload viewer on anchor changes (deep-link support) */
+/* Reload viewer on hash changes */
 window.addEventListener('hashchange', ()=> location.reload());
 </script>
 </body>
