--- a/ugcmaterials.html
+++ b/ugcmaterials.html
@@ -190,7 +190,10 @@
       { id: 'imp-06', title: 'Important Questions Set 6', year: null, tags:['imp','repeated'], type: 'imp', link: 'https://forms.gle/espKuxC4WdvYVP7E6', desc: 'Most Important Questions (learn by repetition). Important/related questions for practice.' },
 
       // --- Books & Public Materials
+      
       { id: 'book-1', title: 'Population Studies — Intro', year: 2017, tags:['book','pdf'], type: 'book', link: 'pdfmaterial-detail.html#book-1', desc:'A public-domain book covering basic demographic methods.' },
+      { id: 'book-2', title: 'Population Studies — Intro', year: 2017, tags:['book','pdf','video'], type: 'video', link: 'videos.html#book-1', desc:'A public-domain book covering basic demographic methods.' },
+    
     ];
 
     /*************************************************************************
