--- a/workshops.html
+++ b/workshops.html
@@ -44,7 +44,7 @@
       <div class="tabs" role="tablist" aria-label="Workshops list">
         <!-- Give each workshop a short id like ws1, ws2 -->
         <button class="tab-btn" data-target="ws1" role="tab" id="ws1-tab">Workshop 1</button>
-        <button class="tab-btn" data-target="ws2" role="tab" id="ws2-tab">Workshop 2</button>
+        <button class="tab-btn" data-target="ws2" role="tab" id="ws2-tab">Workshop 2(SPSS)</button>
         <button class="tab-btn" data-target="ws3" role="tab" id="ws3-tab">Workshop 3</button>
         <!-- Add more workshops as needed -->
       </div>
@@ -121,8 +121,11 @@
       <div id="ws2" class="panel" role="tabpanel" aria-labelledby="ws2-tab">
         <div class="grid-2">
           <div>
-            <h2>Workshop 2 — SPSS Hands-on: Basics → Advanced</h2>
-            <p class="muted">Overview: Data import, cleaning, hypothesis testing, regression and reporting in SPSS.</p>
+            <h2>Workshop 2 — SPSS Hands-on: Basics → Intermediate</h2>
+            <p class="muted">Overview: This 3-day hands-on workshop introduces participants to SPSS for statistical analysis.
+Topics include data import, cleaning, descriptive statistics, hypothesis testing, regression, and reporting.
+The sessions are fully practical, using real datasets and step-by-step demonstrations designed for beginners and intermediate learners.
+By the end of the workshop, participants will be able to confidently prepare data, run essential statistical tests, interpret results, and generate reports for research or professional use.</p>
 
             <div class="subtabs" role="tablist" aria-label="Workshop 2 tabs">
               <button class="subbtn" data-target="ws2-overview">Overview</button>
@@ -142,36 +145,52 @@
             </div>
 
             <div id="ws2-register" class="subpanel">
-              <h4 style="margin-top:12px;">Register</h4>
-              <a class="btn primary" href="#FORM_LINK" target="_blank">Register (Google Form)</a>
+              <h4 style="margin-top:12px;">Register now to secure your seat for the 3-Day Online SPSS Workshop conducted by STATUP.
+After registration, you will receive a confirmation email along with the meeting link and workshop materials.</h4>
+              <a class="btn primary" href="https://forms.gle/BSEpQ4ykPzGcWpHj7" target="_blank">Register</a>
             </div>
 
             <div id="ws2-meet" class="subpanel">
-              <h4 style="margin-top:12px;">Meeting Link</h4>
+              <h4 style="margin-top:12px;">Your meeting link for attending the online workshop will appear here.
+
+The link will also be shared through:
+✔ Email (to your registered email ID)
+✔ WhatsApp message (to your provided number)
+
+Platform: Google Meet
+The link will be activated 10 minutes before the session begins.
+
+👉 Meeting link will be added closer to the workshop start date.</h4>
               <a class="btn ghost" href="#MEET_LINK" target="_blank">Open Meeting Link</a>
             </div>
 
             <div id="ws2-materials" class="subpanel">
-              <h4 style="margin-top:12px;">Materials</h4>
+              <h4 style="margin-top:12px;">All workshop materials will be provided here once the program begins.</h4>
               <ul class="muted">
-                <li><a href="files/ws2-notes.pdf">SPSS Notes (PDF)</a></li>
-                <li><a href="files/ws2-dataset.sav">Sample SAV file</a></li>
+                <li><a href="files/ws2-notes.pdf">Datasets</a></li>
+                <li><a href="files/ws2-dataset.sav">Session Recordings</a></li>
                 <li><a href="files/ws2-syntax.sps">SPSS Syntax</a></li>
+                <li><a href="files/ws2-syntax.sps">Exercises</a></li>
               </ul>
             </div>
 
             <div id="ws2-instructions" class="subpanel">
-              <h4 style="margin-top:12px;">Before the workshop</h4>
+              <h4 style="margin-top:12px;">Please read the steps below carefully before attending the workshop:</h4>
               <ul class="muted">
-                <li>Install SPSS or use the provided sample file in Jamovi (if preferred).</li>
-                <li>Download the dataset and open it before the session.</li>
+                <li>Install SPSS (any version is fine: 20–29).</li>
+                <li>Test your installation by opening a sample dataset.</li>
+                <li>Ensure a stable internet connection for the Google Meet session.</li>
+                <li>Keep a notebook or digital notes app ready for practice work.</li>
+                <li>Join 10 minutes early to avoid delays.</li>
+                <li>All materials will be sent before the session begins.</li>
+                <li>Certificates will be issued only to participants who attend all three days.</li>
               </ul>
             </div>
           </div>
 
           <aside class="card">
             <h4 style="margin-top:0;">Quick info</h4>
-            <p class="muted">Duration: 3 days • Mode: Online (Live) • Level: Beginner to Advanced</p>
+            <p class="muted">Duration: 3 days • Mode: Online (Live) • Level: Beginner → Intermediate</p>
             <div style="margin-top:12px;">
               <a class="btn primary" href="#FORM_LINK" target="_blank">Register</a>
               <a class="btn ghost" href="contact.html">Contact</a>
